# Morpheus

./: .gitignore  .gitmodules  Apr.2025_Collisional_Sending.ino  Dockerfile  README.ipynb  README.md  docker-compose.yml
morpheus_analysis/: CMakeLists.txt  package.xml
morpheus_arduino/: CMakeLists.txt  package.xml
morpheus_collision/: CMakeLists.txt  package.xml
morpheus_data/: CMakeLists.txt  package.xml
morpheus_data/data/: UR5e_simkeyhole_0_2024-03-12_16h49m22s.csv  UR5e_simlargetunnel_0_2024-03-08_02h00m58s.csv  UR5e_simlargetunnel_0_2024-03-12_17h22m25s.csv  UR5e_simlargetunnel_0_2024-03-12_18h36m50s.csv  UR5e_test1_0_2024-02-08_010223.csv  UR5e_test1_0_2024-02-08_010630.csv  UR5e_test1_0_2024-02-08_010825.csv  UR5e_test1_0_2024-02-08_013039.csv  UR5e_test1_0_2024-02-09_01h38m23s.csv  UR5e_test1_0_2024-02-09_013823.csv  UR5e_test1_0_2024-02-09_23h25m23s.csv  UR5e_test1_0_2024-02-11_22h47m05s.csv  UR5e_test1_0_2024-02-11_23h47m11s.csv  UR5e_test1_0_2024-03-12_18h45m46s.csv  UR5e_test1_0_2024-04-01_20h02m24s.csv  UR5e_test1_0_2024-04-01_20h04m34s.csv  UR5e_test1_0_2024-04-02_19h03m38s.csv  UR5e_test1_0_2024-04-02_19h04m42s.csv  UR5e_test1_0_2024-04-02_19h11m22s.csv  UR5e_test1_0_2024-04-02_19h21m25s.csv
morpheus_data/launch/: data.launch  data_csv.launch
morpheus_data/msg/: ContactMap.msg  Float64Vector.msg  StringPair.msg
morpheus_data/scripts/: UCDsession.py  data.py  labstreaming.py  labstreamingreader.py  readBag.py  read_bag.py  session.py  ucddata.py  ui_strings.py  utils.py
morpheus_data/src/: Backup_Bag.cpp  data.cpp  data_csv.cpp  trossen_csv.cpp  trossen_tf_csv.cpp
morpheus_description/: CMakeLists.txt  package.xml
morpheus_gui/: CMakeLists.txt  package.xml
morpheus_haptics/: CMakeLists.txt  package.xml
morpheus_hera/: CMakeLists.txt  README.md  package.xml
morpheus_main/: CMakeLists.txt  package.xml
morpheus_moveit/: CMakeLists.txt  package.xml
morpheus_msgs/: CMakeLists.txt  package.xml
morpheus_spawner/: CMakeLists.txt  package.xml
morpheus_teleop/: CMakeLists.txt  install.sh  package.xml
(+344 files in other folders)
